k8s/frontend/angular-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
  labels:
    app: angular-web
spec:
  replicas: 5 # Nombre de réplicas pour ce déploiement
  selector:
    matchLabels:
      app: angular-web
  template:
    metadata:
      labels:
        app: angular-web
    spec:
      containers:
        - name: angular-web
          image: mathieudielna/angular-web:latest
          ports:
            - containerPort: 80
