k8s/frontend/angular.-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  labels:
    app: angular-web
spec:
  selector:
    app: angular-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000  # Port sur lequel le service est accessible
  type: NodePort
